Made seperate files for serial config

--- a/VMtoNucleo/makefile
+++ b/VMtoNucleo/makefile
@@ -1,12 +1,15 @@
 CXX = gcc
 CXXFLAGS = -g -Wall -Werror -Wshadow
-OBJECTS = VMtoNucleo.o 
+OBJECTS = VMtoNucleo.o SerialConfig.o 
 EXEC = VMtoNucleo
 
 all: clean VMtoNucleo
 
 VMtoNucleo: ${OBJECTS} 
 	${CXX} ${CXXFLAGS} ${OBJECTS} -o ${EXEC}
+
+SerialConfig.o:
+	${CXX} -c ${CXXFLAGS} SerialConfig.c -o SerialConfig.o
 
 clean:
 	rm -rf ${OBJECTS} ${EXEC}
